--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -31,7 +31,7 @@
     "study_type = \"program\"\n",
     "mode_of_interest = \"e-bike\"\n",
     "include_test_users = False\n",
-    "dynamic_labels = { }"
+    "dynamic_labels = {}"
    ]
   },
   {
@@ -215,28 +215,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=f\"Sketch of Total Kilograms of CO2 Emissions of {mode_of_interest} trips\"\n",
-    "file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
+    "#  Case: label_options is present on the config file\n",
+    "if len(dynamic_labels) > 0:\n",
+    "    plot_title_no_quality=f\"Sketch of Total Kilograms of CO2 Emissions of {mode_of_interest} trips\"\n",
+    "    file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
     "\n",
-    "try:\n",
-    "    ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(kg)': ['sum', 'mean']},)\n",
-    "    ebco2.columns = ['total_kg_CO2_emissions', 'average_kg_CO2_emission']\n",
-    "    ebco2 = ebco2.reset_index()\n",
-    "    ebco2 = ebco2.sort_values(by=['total_kg_CO2_emissions'], ascending=False)\n",
-    "    ebco2['boolean'] = ebco2['total_kg_CO2_emissions'] > 0\n",
-    "    net_CO2_emissions = round(sum(ebco2['total_kg_CO2_emissions']), 2)\n",
+    "    try:\n",
+    "        ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(kg)': ['sum', 'mean']},)\n",
+    "        ebco2.columns = ['total_kg_CO2_emissions', 'average_kg_CO2_emission']\n",
+    "        ebco2 = ebco2.reset_index()\n",
+    "        ebco2 = ebco2.sort_values(by=['total_kg_CO2_emissions'], ascending=False)\n",
+    "        ebco2['boolean'] = ebco2['total_kg_CO2_emissions'] > 0\n",
+    "        net_CO2_emissions = round(sum(ebco2['total_kg_CO2_emissions']), 2)\n",
     "\n",
-    "    x = ebco2['total_kg_CO2_emissions']\n",
-    "    y = ebco2['Replaced_mode']\n",
-    "    color = ebco2['boolean']\n",
+    "        x = ebco2['total_kg_CO2_emissions']\n",
+    "        y = ebco2['Replaced_mode']\n",
+    "        xLabel = 'CO2 Emissions (kg)'\n",
+    "        yLabel = 'Replaced Mode'\n",
+    "        color = ebco2['boolean']\n",
     "\n",
-    "    plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}(kg CO2 Emissions )\\n\"+quality_text\n",
-    "    CO2_impact(x,y,color,plot_title,file_name)\n",
-    "    alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
-    "    \n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "        plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}(kg CO2 Emissions )\\n\"+quality_text\n",
+    "        CO2_impact(x,y,color,plot_title, xLabel,yLabel,file_name)\n",
+    "        alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
+    "        \n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
+    "# case: when label_options is absent from the config file\n",
+    "else: \n",
+    "    plot_title_no_quality=f\"Sketch of Total pounds of CO2 Emissions of {mode_of_interest} trips\"\n",
+    "    file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
+    "\n",
+    "    try:\n",
+    "        ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
+    "        ebco2.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
+    "        ebco2 = ebco2.reset_index()\n",
+    "        ebco2 = ebco2.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
+    "        ebco2['boolean'] = ebco2['total_lb_CO2_emissions'] > 0\n",
+    "        net_CO2_emissions = round(sum(ebco2['total_lb_CO2_emissions']), 2)\n",
+    "\n",
+    "        x = ebco2['total_lb_CO2_emissions']\n",
+    "        y = ebco2['Replaced_mode']\n",
+    "        xLabel = 'CO2 Emissions (lb)'\n",
+    "        yLabel = 'Replaced Mode'\n",
+    "        color = ebco2['boolean']\n",
+    "\n",
+    "        plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}(lb CO2 Emissions )\\n\"+quality_text\n",
+    "        CO2_impact(x,y,color,plot_title,xLabel,yLabel,file_name)\n",
+    "        alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
+    "        \n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   }
  ],
