--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -106,9 +106,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get timestamp from known year/month/day aggregated to days\n",
-    "sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance']\n",
-    "sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_kg_CO2']\n",
+    "if len(dynamic_labels) > 0:\n",
+    "    # Get timestamp from known year/month/day aggregated to days\n",
+    "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance']\n",
+    "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_kg_CO2']\n",
+    "else:\n",
+    "    # Get timestamp from known year/month/day aggregated to days\n",
+    "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
+    "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2']\n",
     "\n",
     "if len(expanded_ct) == 0:\n",
     "    data = expanded_ct.copy()\n",
@@ -128,8 +133,7 @@
     "    \n",
     "    if \"Mode_confirm\" in expanded_ct.columns:\n",
     "        if (len(dynamic_labels) > 0):\n",
-    "            label_type = \"MODE\" \n",
-    "            dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, label_type)\n",
+    "            dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, \"MODE\")\n",
     "            data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))\n",
     "        else:\n",
     "            data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
@@ -154,26 +158,48 @@
     "        mode_counts = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False).size()\n",
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
     "\n",
-    "        # Sum daily distance traveled for each mode\n",
-    "        mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[['distance']].sum()\n",
-    "        mode_distance.rename(columns={'sum':'distance'}, inplace=True)\n",
-    "        mode_distance['distance'] = mode_distance['distance'].fillna(0)\n",
+    "        if (len(dynamic_labels)) > 0:\n",
+    "            # Sum daily distance traveled for each mode\n",
+    "            mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[['distance']].sum()\n",
+    "            mode_distance.rename(columns={'sum':'distance'}, inplace=True)\n",
+    "            mode_distance['distance'] = mode_distance['distance'].fillna(0)\n",
     "\n",
-    "        # Sum daily emissions for each user\n",
-    "        emissions = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_kg_CO2', 'distance']].sum()\n",
-    "        emissions['Mode_confirm_kg_CO2'] = emissions['Mode_confirm_kg_CO2'].fillna(0)\n",
-    "        emissions['distance'] = emissions['Mode_confirm_kg_CO2'].fillna(0)\n",
+    "            # Sum daily emissions for each user\n",
+    "            emissions = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_kg_CO2', 'distance']].sum()\n",
+    "            emissions['Mode_confirm_kg_CO2'] = emissions['Mode_confirm_kg_CO2'].fillna(0)\n",
+    "            emissions['distance'] = emissions['Mode_confirm_kg_CO2'].fillna(0)\n",
     "\n",
-    "        # Sum daily energy for each user\n",
-    "        energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', 'distance']].sum()\n",
-    "        energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "        energy['distance'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "            # Sum daily energy for each user\n",
+    "            energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', 'distance']].sum()\n",
+    "            energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "            energy['distance'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
     "\n",
-    "        # Add 7-day rolling avg smoothing to better see trends\n",
-    "        mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "        mode_distance['distance_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "        emissions['distance_smooth'] = emissions.groupby(['user_id'])['distance'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "        energy['distance_smooth'] = energy.groupby(['user_id'])['distance'].apply(lambda x: x.rolling(7,1).mean())"
+    "            # Add 7-day rolling avg smoothing to better see trends\n",
+    "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            mode_distance['distance_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            emissions['distance_smooth'] = emissions.groupby(['user_id'])['distance'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            energy['distance_smooth'] = energy.groupby(['user_id'])['distance'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "        else:\n",
+    "            # Sum daily distance traveled for each mode\n",
+    "            mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[['distance_miles']].sum()\n",
+    "            mode_distance.rename(columns={'sum':'distance_miles'}, inplace=True)\n",
+    "            mode_distance['distance_miles'] = mode_distance['distance_miles'].fillna(0)\n",
+    "\n",
+    "            # Sum daily emissions for each user\n",
+    "            emissions = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_lb_CO2', 'distance_miles']].sum()\n",
+    "            emissions['Mode_confirm_lb_CO2'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
+    "            emissions['distance_miles'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
+    "\n",
+    "            # Sum daily energy for each user\n",
+    "            energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', 'distance_miles']].sum()\n",
+    "            energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "            energy['distance_miles'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "\n",
+    "            # Add 7-day rolling avg smoothing to better see trends\n",
+    "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            emissions['distance_miles_smooth'] = emissions.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            energy['distance_miles_smooth'] = energy.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())"
    ]
   },
   {
@@ -196,24 +222,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality = 'Net Daily Emissions (All Users, excluding air)'\n",
-    "file_name = \"ts_emissions_user%s\"%file_suffix\n",
+    "if (len(dynamic_labels)) > 0:\n",
+    "    plot_title_no_quality = 'Net Daily Emissions (All Users, excluding air)'\n",
+    "    file_name = \"ts_emissions_user%s\"%file_suffix\n",
     "\n",
-    "try:\n",
-    "    # Emissions per week across all users (net impact)\n",
-    "    plot_data = emissions.groupby(['date_time'], as_index=False)['Mode_confirm_kg_CO2'].agg(['sum'])\n",
-    "    total_sum = plot_data['sum'].sum()\n",
+    "    try:\n",
+    "        # Emissions per week across all users (net impact)\n",
+    "        plot_data = emissions.groupby(['date_time'], as_index=False)['Mode_confirm_kg_CO2'].agg(['sum'])\n",
+    "        total_sum = plot_data['sum'].sum()\n",
     "\n",
-    "    plot_data = plot_data.merge(active_users, on='date_time')\n",
-    "    plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
+    "        plot_data = plot_data.merge(active_users, on='date_time')\n",
+    "        plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    ylab = 'Emissions (kg CO2/day/user)'\n",
-    "    timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "        ylab = 'Emissions (kg CO2/day/user)'\n",
+    "        timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
+    "        alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
+    "else:\n",
+    "    plot_title_no_quality = 'Net Daily Emissions (All Users, excluding air)'\n",
+    "    file_name = \"ts_emissions_user%s\"%file_suffix\n",
+    "\n",
+    "    try:\n",
+    "        # Emissions per week across all users (net impact)\n",
+    "        plot_data = emissions.groupby(['date_time'], as_index=False)['Mode_confirm_lb_CO2'].agg(['sum'])\n",
+    "        total_sum = plot_data['sum'].sum()\n",
+    "\n",
+    "        plot_data = plot_data.merge(active_users, on='date_time')\n",
+    "        plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
+    "\n",
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "        ylab = 'Emissions (lb CO2/day/user)'\n",
+    "        timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
+    "        alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -251,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Emissions per mile per day"
+    "### Emissions per mile/kilometer per day"
    ]
   },
   {
@@ -260,23 +306,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality = 'Average Daily Emission Rate (All Users, excluding air)'\n",
-    "file_name = \"ts_emissions_vmt%s\"%file_suffix\n",
+    "if (len(dynamic_labels) > 0):\n",
+    "    plot_title_no_quality = 'Average Daily Emission Rate (All Users, excluding air)'\n",
+    "    file_name = \"ts_emissions_vmt%s\"%file_suffix\n",
     "\n",
-    "try:\n",
-    "    # Emissions per mile per day across all users (travel efficiency)\n",
-    "    # Note that the energy plot will be identical to this one since scale factor is divided out\n",
-    "    emissions['CO2_per_km'] = emissions['Mode_confirm_kg_CO2'] / emissions['distance_smooth']\n",
-    "    emissions['CO2_per_km'] = emissions['CO2_per_km'].fillna(0)\n",
-    "    plot_data = emissions.groupby(['date_time'])['CO2_per_km'].agg(['mean']).reset_index()\n",
+    "    try:\n",
+    "        # Emissions per kilometer per day across all users (travel efficiency)\n",
+    "        # Note that the energy plot will be identical to this one since scale factor is divided out\n",
+    "        emissions['CO2_per_km'] = emissions['Mode_confirm_kg_CO2'] / emissions['distance_smooth']\n",
+    "        emissions['CO2_per_km'] = emissions['CO2_per_km'].fillna(0)\n",
+    "        plot_data = emissions.groupby(['date_time'])['CO2_per_km'].agg(['mean']).reset_index()\n",
     "\n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    ylab = 'Emissions (kg CO2/km/day)'\n",
-    "    timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
-    "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality) "
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "        ylab = 'Emissions (kg CO2/km/day)'\n",
+    "        timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
+    "        alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
+    "else:\n",
+    "    plot_title_no_quality = 'Average Daily Emission Rate (All Users, excluding air)'\n",
+    "    file_name = \"ts_emissions_vmt%s\"%file_suffix\n",
+    "\n",
+    "    try:\n",
+    "        # Emissions per kilometer per day across all users (travel efficiency)\n",
+    "        # Note that the energy plot will be identical to this one since scale factor is divided out\n",
+    "        emissions['CO2_per_mile'] = emissions['Mode_confirm_lb_CO2'] / emissions['distance_miles_smooth']\n",
+    "        emissions['CO2_per_mile'] = emissions['CO2_per_mile'].fillna(0)\n",
+    "        plot_data = emissions.groupby(['date_time'])['CO2_per_mile'].agg(['mean']).reset_index()\n",
+    "\n",
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "        ylab = 'Emissions (lb CO2/mile/day)'\n",
+    "        timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
+    "        alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
